--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
 spring.thymeleaf.cache=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+# connect to MySQL 
+#spring.datasource.url=jdbc:mysql://localhost:3306/fitness?useSSL=false
+#spring.datasource.username=admin_projekt
+#spring.datasource.password=fitness1234!
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/fitness?serverTimezone=Europe/Vienna
+spring.datasource.username=admin_projekt
+spring.datasource.password=fitness1234!
