--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/fitness?serverTimezone=Europe/Vienna
 spring.datasource.username=admin_projekt
 spring.datasource.password=fitness1234!
+
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.thymeleaf.cache=false
+
+spring.resources.static-locations=file:src/main/resources/static/
+spring.resources.cache.period=0
+
+
+# docker container run --rm -p 3306:3306 -e MYSQL_PASSWORD=fitness1234! -e MYSQL_USER=admin_projekt -e MYSQL_ROOT_PASSWORD=fitness1234! -e MYSQL_DATABASE=fitness mysql
